--- a/content/tags.yml
+++ b/content/tags.yml
@@ -14,3 +14,7 @@
   color: "#a627e6"
   icon: ./assets/images/xai-land_logo.png
   featured: true
+- name: openull
+  color: "#a627e6"
+  icon: ./assets/images/ssomee_logo.png
+  featured: true
